kube-manifests/rancher-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: rancher
    cert-manager.io/issuer-kind: Issuer
    meta.helm.sh/release-name: rancher
    meta.helm.sh/release-namespace: cattle-system
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
  creationTimestamp: "2025-03-06T13:08:18Z"
  generation: 1
  labels:
    app: rancher
    app.kubernetes.io/managed-by: Helm
    chart: rancher-2.10.3
    heritage: Helm
    release: rancher
  name: rancher
  namespace: cattle-system
  resourceVersion: "446436"
  uid: cae8e4d4-99f2-48a3-b824-943e610ecb09
spec:
  rules:
  - host: rancher.local
    http:
      paths:
      - backend:
          service:
            name: rancher
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - rancher.local
    secretName: tls-rancher-ingress
status:
  loadBalancer: {}
